Merge branch 'dev' into fix/diverged-main
# Conflicts:
#	.github/workflows/build.yml
#	.github/workflows/buildRelease.yml
#	.github/workflows/spotless.yml
#	.gitignore
#	.idea/misc.xml
#	build.gradle
#	docs/dev/guide.md
#	settings.gradle
#	src/main/java/com/github/codestorm/bounceverse/Bounceverse.java
#	src/main/java/com/github/codestorm/bounceverse/components/behaviors/Attack.java
#	src/main/java/com/github/codestorm/bounceverse/components/behaviors/Behavior.java
#	src/main/java/com/github/codestorm/bounceverse/components/behaviors/CooldownBehavior.java
#	src/main/java/com/github/codestorm/bounceverse/components/behaviors/Explosion.java
#	src/main/java/com/github/codestorm/bounceverse/components/behaviors/HealthDeath.java
#	src/main/java/com/github/codestorm/bounceverse/components/behaviors/ScaleChange.java
#	src/main/java/com/github/codestorm/bounceverse/components/behaviors/UndoableBehavior.java
#	src/main/java/com/github/codestorm/bounceverse/components/behaviors/paddle/PaddleShooting.java
#	src/main/java/com/github/codestorm/bounceverse/components/properties/Attributes.java
#	src/main/java/com/github/codestorm/bounceverse/components/properties/Shield.java
#	src/main/java/com/github/codestorm/bounceverse/core/LaunchOptions.java
#	src/main/java/com/github/codestorm/bounceverse/core/SettingsManager.java
#	src/main/java/com/github/codestorm/bounceverse/core/systems/GameSystem.java
#	src/main/java/com/github/codestorm/bounceverse/core/systems/InputSystem.java
#	src/main/java/com/github/codestorm/bounceverse/core/systems/PhysicSystem.java
#	src/main/java/com/github/codestorm/bounceverse/factory/SceneFactory.java
#	src/main/java/com/github/codestorm/bounceverse/factory/entities/BallFactory.java
#	src/main/java/com/github/codestorm/bounceverse/factory/entities/BrickFactory.java
#	src/main/java/com/github/codestorm/bounceverse/factory/entities/BulletFactory.java
#	src/main/java/com/github/codestorm/bounceverse/factory/entities/PaddleFactory.java
#	src/main/java/com/git