@@ -5,11 +5,15 @@ plugins {
 	id 'com.diffplug.spotless' version "8.0.0"
 }
 
-group = 'com.github.codestorm'
-version = '1.0.0'
-
 repositories {
 	mavenCentral()
+}
+
+java {
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(24)
+		vendor.set(JvmVendorSpec.ADOPTIUM)
+	}
 }
 
 dependencies {
@@ -54,7 +58,7 @@ test {
 }
 
 javafx {
-	version = "21"
+	version = "25"
 	modules = ['javafx.controls', 'javafx.media']
 }
 
@@ -70,24 +74,5 @@ spotless {
 	java {
 		googleJavaFormat().aosp().reflowLongStrings()
 		formatAnnotations()
-	}
-}
-
-// enable flexible constructors (preview feature)
-tasks.withType(JavaCompile).configureEach {
-	options.compilerArgs += "--enable-preview"
-}
-
-tasks.withType(Test).configureEach {
-	jvmArgs += "--enable-preview"
-}
-
-tasks.withType(JavaExec).configureEach {
-	jvmArgs += "--enable-preview"
-}
-
-java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(24)
 	}
 }
